--- a/users/templates/users/dashboard.html
+++ b/users/templates/users/dashboard.html
@@ -100,6 +100,7 @@
             <a href="{% url 'add_expense' %}"><button>Add Expense</button></a>
             <a href="{% url 'expense_summary' %}"><button>Expense Summary</button></a>
             <a href="{% url 'income_summary' %}"><button>Income Summary</button></a>
+            <a href="{% url 'create_group' %}"><button>Create Expense Sharing Group</button></a>
         </div>
 
         <div class="home-btn">
